docs(website) Small block image layout fix on mobile

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -16,6 +16,7 @@
     }
     .imageAlignSide .blockImage {
         display: block;
+        margin-left 0px;
     }
 }
 
